--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>SpicyZing</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/headerStyle.css">
+    <link rel="stylesheet" href="style/footerStyle.css">
 </head>
 <body>
     <div class="header">
         <a href="">
-            <img src="assets/lime_logo.png" width="125" id="lime-logo">
+            <img src="assets/logo.png" width="200" id="logo">
         </a>
         <div class="navbar">
             <a href="" id="active-page">Home</a>
             <a href="pages/aboutus.html">About us</a>
             <a href="pages/contactus.html">Contact us</a>
             <a href="pages/menu.html">Delivery</a>
+            <a href="pages/reservation.html">Reservation</a>
         </div>
         <div class="sign-up-options">
             <div class="login-button">
@@ -31,15 +33,15 @@
     <div class="content">
         <h1>Welcome to SpicyZing!</h1>
         <div class="right-left">
-            <img src="i4.jpg">
+            <img src="assets/home1.jpg">
             <p>Every visit is a journey through flavors, whether you're dining in with us or enjoying our delectable dishes from the comfort of your home.
         </div> 
         <div class="right-left">
             <p>At SpicyZing, we believe that great food should be enjoyed anywhere, which is why we offer both dine-in and delivery options, allowing you to savor our signature dishes wherever you are.</p>
-            <img src="i2.jpg" width="750">
+            <img src="assets/home2.jpg" width="750">
         </div> 
         <div class="right-left">
-            <img src="i3.jpg" width="750">
+            <img src="assets/home3.jpg" width="750">
             <p>Indulge your senses at SpicyZing, where our commitment to exceptional taste extends beyond our dine-in experience to our convenient delivery service, bringing our culinary creations directly to you.</p>    
         </div>
         <div class="right-left">
@@ -52,27 +54,34 @@
     </div>
 
     <div class="footer">
-        <div class="footer-left">
-            <h3>Follow us on</h3>
-            <ul>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>Twitter</li>
-                <li>Instagram</li>
-                <li>LinkedIn</li>
-            </ul>
+        <div class="footer-items">
+            <div class="footer-item">
+                <h3>SpicyZing</h3>
+                <p>We are committed to providing a fully accessible dining experience for all guests. If you have any questions or need assistance, please contact us.</p>
+            </div>
+            <div class="footer-item">
+                <h3>Follow us on</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/">Facebook</a></li>
+                    <li><a href="https://twitter.com/home">Twitter</a></li>
+                    <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/aboutus.html">About us</a></li>
+                    <li><a href="pages/contactus.html">Contact us</a></li>
+                    <li><a href="pages/menu.html">Delivery</a></li>
+                    <li><a href="pages/reservation.html">Reservation</a></li>
+                    <li><a href="pages/login.html">Log in</a></li>
+                    <li><a href="pages/signup.html">Sign up</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="footer-right">
-            <h3>Useful Links</h3>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/aboutus.html">About us</a></li>
-                <li><a href="pages/contactus.html">Contact us</a></li>
-                <li><a href="pages/menu.html">Menu and Delivery</a></li>
-                <li><a href="pages/login.html">Log in</a></li>
-                <li><a href="pages/signup.html">Sign up</a></li>
-            </ul>
-        </div>
+        <p id="copy-right">© 2024 SpicyZing. All rights reserved.</p>
     </div>
 
 </body>
